Switching our btn class to button to prevent overlap with bootstrap styles

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,4 @@
-.btn{
+.button{
     display: inline-block;
     position: relative;
     font-size: .8em;
